Feature/movement api status (#29)
* Add a new route

* Add a new route

* Add tests
