# api/src/controllers/movement.ts
@@ -2,15 +2,26 @@ import { type Context, Hono } from 'hono';
 import { applicationCxt } from '../application-context-middleware';
 import { DependencyContainer } from 'tsyringe';
 import { MovementService } from '../services/movement-service';
-import { MovementItem } from '../views';
+import { MovementItem, MovementStatus } from '../views';
 
 const app = new Hono();
+
+app.get('/', async (context: Context) => {
+  const appContext = context.get(applicationCxt) as DependencyContainer;
+  const service = appContext.resolve(MovementService);
+  try {
+    const status = await service.getCurrentMovementStatusAsync();
+    return context.json(status);
+  } catch {
+    return context.json({ hasBeenStarted: false } as MovementStatus);
+  }
+});
 
 app.post('/start', async (context: Context) => {
   const appContext = context.get(applicationCxt) as DependencyContainer;
   const service = appContext.resolve(MovementService);
   await service.createNewMovementAsync();
-  return Response.json('ok');
+  return context.json('ok');
 });
 
 app.post('/item', async (context: Context) => {
@@ -18,7 +29,7 @@ app.post('/item', async (context: Context) => {
   const service = appContext.resolve(MovementService);
   const item = (await context.req.json()) as MovementItem;
   const result = await service.addItemToDeparturesAsync(item);
-  return Response.json(result);
+  return context.json(result);
 });
 
 app.delete('/item', async (context: Context) => {
@@ -26,7 +37,7 @@ app.delete('/item', async (context: Context) => {
   const service = appContext.resolve(MovementService);
   const item = (await context.req.json()) as MovementItem;
   const result = await service.addItemToArrivalsAsync(item);
-  return Response.json(result);
+  return context.json(result);
 });
 
 export default app;
